--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,3 +85,7 @@
   display: flex;
   flex-direction: column;
 }
+
+.former {
+  @apply bg-cream sm:text-[1.5vw] border border-black rounded-none
+}
