add technologies used

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,3 +89,7 @@
 .former {
   @apply bg-cream sm:text-[1.5vw] border border-black rounded-none
 }
+
+.linker {
+  @apply text-black bg-cream border border-black rounded-lg font-bold p-2 px-5 text-[3.75vw] sm:text-[1.75vw] tracking-wider w-full mt-4 flex gap-4 items-center
+}
